objects/Categorys__x.object
<CustomObject>
    <description>Categorys</description>
    <externalDataSource>OrderDB</externalDataSource>
    <externalName>Categorys</externalName>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Categorys</relationshipLabel>
        <relationshipName>Categorys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>categoryID__c</fullName>
        <description>categoryID</description>
        <externalDeveloperName>categoryID</externalDeveloperName>
        <label>categoryID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>categoryName__c</fullName>
        <description>categoryName</description>
        <externalDeveloperName>categoryName</externalDeveloperName>
        <label>categoryName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Categorys</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Categorys</pluralLabel>
</CustomObject>